# ChemistrySimulator

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: elements.py  nomenclature.py  quantum.py  reactions.py  spectroscopy.py  structures.py  substances.py
backend/app/data/: activity_series.json  common_structures.json  elements.json  reactions.json  solubility_rules.json  substances.json  thermodynamic_data.json
backend/app/engine/: constants.py  effects_mapper.py  electron_density.py  equation_balancer.py  geometry_optimizer.py  nomenclature.py  orbital_calculator.py  rdkit_utils.py  reaction_engine.py  reaction_matcher.py  reaction_predictor.py  spectroscopy.py  structure_generator.py  thermodynamics.py
backend/app/models/: element.py  reaction.py  structure.py  substance.py
backend/app/scripts/: __main__.py  generate_elements.py  generate_structures.py
backend/tests/: test_chemistry_data.py  test_common_structures.py  test_effects_mapper.py  test_element_model.py  test_elements_api.py  test_elements_data.py  test_equation_balancer.py  test_nomenclature.py  test_orbital_calculator.py  test_quantum.py  test_reaction_engine.py  test_reaction_matcher.py  test_reaction_models.py  test_reaction_predictor.py  test_reactions_api.py  test_spectroscopy.py  test_structure_generator.py  test_structure_models.py  test_structures_api.py  test_thermodynamics.py
docs/superpowers/plans/: 2026-03-20-phase1-foundation.md  2026-03-20-phase2-reactions.md  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
(+73 files in other folders)
