[project]
name = "chemistry-simulator-backend"
version = "0.1.0"
description = "Chemistry Simulator backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "mendeleev>=0.18.0",
    "rdkit>=2024.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
]
